# rms

./: .env.example  .gitignore  API_PLANS.md  CLAUDE.md  DATABASE_SETUP.md  DEVELOPMENT_PHASES.md  Dockerfile  README.md  SHORTCOMINGS.md  alembic.ini  conftest.py  create_demo_users.py  docker-compose.yml  insert_demo_data.sql  mcp_plans.md  phase2_complete_test.py  phase2_endpoint_test_results.json  phase2_endpoints_test.py  pyproject.toml  reset_restart_server.sh  setup_test_data.sql  simple_api_test.py  test_workflows_quick.sh  usecases.md
alembic/: env.py
app/: main.py
app/core/: app.py  config.py  setup.py
archive/: COMPREHENSIVE_ALL_PHASES_PRODUCTION_REPORT.md  FINAL_100_PERCENT_PRODUCTION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE2_ISSUES_ANALYSIS_AND_FIX_PLAN.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_FINAL_100_PERCENT_PRODUCTION_REPORT.md  PHASE3_PRODUCTION_REPORT.md  REDIS_DOCKER_SETUP.md  comprehensive_all_phases_production_test.py  comprehensive_all_phases_test_results.json  comprehensive_phase2_api_test.py  comprehensive_phase2_test_results.json  comprehensive_phase3_endpoints_test.py  comprehensive_phase3_production_test.py  comprehensive_phase3_test.py  debug_uuid.py  final_phase3_production_verification.py  fix_uuid_validation.py  focused_security_test.py  phase1_production_grade_test.py  phase1_production_verification.py  phase2_production_grade_test.py  phase3_production_test_results.json  run_production_tests.py  test_phase3_direct.py  verify_phase1.py  verify_phase3.py
data/fixtures/: categories.py  items.py  organizations.py  restaurants.py  tables.py  users.py
data/seeders/: seed_data.py
docker/postgres/: init.sql
frontend/: HOMEPAGE_DESIGN.md  INTEGRATION_TEST_RESULTS.md  MULTI_TENANT_INTEGRATION.md  PLAYWRIGHT_MCP_TESTING.md  PLAYWRIGHT_MCP_WORKFLOWS.md  WORKFLOW.md  changelog.md  package-lock.json  package.json  plans.md  playwright.config.js  run-integration-tests.sh  test-workflows.js  test-workflows.sh
frontend/tests/: frontend-workflows.spec.js
mcp/: .env.example  README.md  claude_desktop_config.md  config.py  requirements.txt  server.py
mcp/clients/: __init__.py  ollama_client.py  rms_client.py
mcp/examples/: chat_example.py
mcp/models/: __init__.py  common.py  reservation.py
mcp/tools/: base.py  reservations.py
scripts/: seed.sh  start.sh  test.sh  verify_database.sh
tabemas_frontend/: package-lock.json  package.json
tests/: conftest.py
tests/api_tester/: README.md  (+2 more)
(+266 files in other folders)
